[Refactor] Rename batch write to merge commit on FE
Signed-off-by: PengFei Li <lpengfei2016@gmail.com>